--- a/tipito-spa/package.json
+++ b/tipito-spa/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "core-js": "^3.4.4",
+    "es6-promise": "^4.2.8",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
